# GPU_Programming_Specialization

./: .clang-format  README.md
00-Intro_to_Concurrent_Programming_with_C++/: 00-dining_philosophers.cpp  01-producer_consumer.cpp  02-sleeping_barber.cpp  03-cigarette_smokers.cpp
00-Intro_to_Concurrent_Programming_with_C++/00-dining_philosophers/: main.cpp
00-Intro_to_Concurrent_Programming_with_C++/01-producer_consumer/: main.cpp
01-PMPP/03-multidimensional_grids_and_data/blur_rgb/: CMakeLists.txt  main.cu
01-PMPP/03-multidimensional_grids_and_data/matrix_multiply/: CMakeLists.txt  main.cu
01-PMPP/03-multidimensional_grids_and_data/rgb2gray/: CMakeLists.txt  main.cu
01-PMPP/05-memory_architecture_and_data_locality/tiled_matrix_multiply/: CMakeLists.txt  main.cu
01-Threads_Blocks_Grids/: thread_linear_addressing.cu
C1-Intro_to_Concurrent_Programming/: README.md
C1-Intro_to_Concurrent_Programming/M2-dining_philosophers/: main.cpp
C1-Intro_to_Concurrent_Programming/M4-runtime_api/: Makefile  vector_add_sub.cu
C1-Intro_to_Concurrent_Programming/M5-function_execution_space_specifier/: Makefile  main.cu
C1-Introduction_to_Concurrent_Programming_with_GPUs/: READMD.md
C1-Introduction_to_Concurrent_Programming_with_GPUs/M2-Core_Principles_of_Parallel_Programming_on_CPUs_and_GPUs/dining_philosophers/: Makefile  dining_philosophers.cpp  dining_philosophers.py
C1-Introduction_to_Concurrent_Programming_with_GPUs/M2-Core_Principles_of_Parallel_Programming_on_CPUs_and_GPUs/producer_consumer/: Makefile  producer_consumer.cpp
C1-Introduction_to_Concurrent_Programming_with_GPUs/M2-Core_Principles_of_Parallel_Programming_on_CPUs_and_GPUs/sleeping_barber/: Makefile  sleeping_barber.cpp  sleeping_barber.py
C1-Introduction_to_Concurrent_Programming_with_GPUs/M3-Introduction_to_Parallel_Programming_with_C++_and_Python/cpp_assignment/: Makefile  assignment.cpp  assignment.h
C1-Introduction_to_Concurrent_Programming_with_GPUs/M3-Introduction_to_Parallel_Programming_with_C++_and_Python/cpp_example/: Makefile  atomic_example.cpp  future_example.cpp  mutex_example.cpp  thread_example.cpp  thread_example.h
C1-Introduction_to_Concurrent_Programming_with_GPUs/M3-Introduction_to_Parallel_Programming_with_C++_and_Python/python_assignment/: Makefile  assignment.py
C1-Introduction_to_Concurrent_Programming_with_GPUs/M4-NVidia_GPU_Hardware_and_Software/: README.md
C1-Introduction_to_Concurrent_Programming_with_GPUs/M4-NVidia_GPU_Hardware_and_Software/driver_api/: drivertest.cpp
C1-Introduction_to_Concurrent_Programming_with_GPUs/M4-NVidia_GPU_Hardware_and_Software/runtime_api/: vector_add.cu
C1-Introduction_to_Concurrent_Programming_with_GPUs/M5-Introduction_to_GPU_Programming/complex/: Makefile
C1-Introduction_to_Concurrent_Programming_with_GPUs/M5-Introduction_to_GPU_Programming/complex/includes/: simple.h
C1-Introduction_to_Concurrent_Programming_with_GPUs/M5-Introduction_to_GPU_Programming/complex/src/: simple.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/: README.md
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-Threads_Blocks_and_Grids/calculation/: calculation.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-Threads_Blocks_and_Grids/convert_rgb_to_grey/: Makefile  convertRGBToGrey.cu  convertRGBToGrey.hpp
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-Threads_Blocks_and_Grids/cpu_gpu_memory/: Makefile  cpu_gpu_memory.h  test_data.csv
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-Threads_Blocks_and_Grids/host_and_device_memory_allocation/: broken_mapped_memory_allocation.cu  broken_paged_pinned_memory_allocation.cu  memory_allocation.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-Threads_Blocks_and_Grids/search/: search.cu  search.h
C2-Introduction_to_Parallel_Programming_with_CUDA/M2-rgb_to_gray/: Makefile  main.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/M3-Host_and_Global_Memory/cpu_gpu_memory/: README.md  cpu_gpu_memory.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/M3-Host_and_Global_Memory/host_and_device_memory_allocation/: broken_mapped_memory_allocation.cu  broken_mapped_memory_allocation.h  broken_paged_pinned_memory_allocation.cu  memory_allocation.cu  memory_allocation.h  memory_copy.cu  memory_copy.h
C2-Introduction_to_Parallel_Programming_with_CUDA/M4-Shared_and_Constant_Memory/shared_and_constant_memory/: Makefile  sharedConstantMemoryLab.cu
C2-Introduction_to_Parallel_Programming_with_CUDA/M4-Shared_and_Constant_Memory/simple_linear_blur/: simpleLinearBlurFilter.cu  simpleLinearBlurFilter.hpp
C2-Introduction_to_Parallel_Programming_with_CUDA/M5-Register_Memory/memory_analysis_assignment/: memory_analysis.cu  output.csv  output.txt  run.sh
C2-Introduction_to_Parallel_Programming_with_CUDA/M5-Register_Memory/memory_analysis_example/: memory_analysis.cu
C3-CUDA_at_Scale_for_the_Enterprise/: README.md
C3-CUDA_at_Scale_for_the_Enterprise/M2-Multiple_CPU_and_GPU_Systems/multi_cpu_assignment/: multi_cpu.cu
C3-CUDA_at_Scale_for_the_Enterprise/M2-Multiple_CPU_and_GPU_Systems/multi_cpu_example/: multi_cpu.cu  multi_cpu.h  producer_consumer.py
C3-CUDA_at_Scale_for_the_Enterprise/M3-CUDA_Events_and_Streams/streams/: Makefile  README.md  streams.cu  streams.h
C4-CUDA_Advanced_Libraries/: README.md
Canny_Edge_CUDA/: CMakeLists.txt  README.md
Canny_Edge_CUDA/src/: canny_cuda.cu  canny_cuda_encapsulate.cu  canny_cuda_naive.cu  canny_cuda_pinned.cu  canny_opencv.cpp  main.cu
KLT_Tracker_CPP/: CMakeLists.txt  main.cpp  tracker_basic.cpp  tracker_opencv.cpp
KLT_Tracker_CUDA/: .clangd  CMakeLists.txt  README.md
KLT_Tracker_CUDA/src/: tracker_basic.cpp  tracker_cuda_async.cu  tracker_cuda_lk.cu  tracker_cuda_naive.cu  tracker_opencv.cpp
